[tool.poetry]
name = "piranha-market-maker"
version = "0.1.0"
description = ""
authors = ["Terrence Brannon <metaperl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ccxt = "^1.33.71"
pydantic = "^1.6.1"
python-dotenv = "^0.14.0"
loguru = "^0.5.1"
"ruamel.yaml" = "^0.16.10"
traitlets = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
